adicionado logo formatada. Páginas foram linkadas.

--- a/contato.html
+++ b/contato.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="icon" href="favicon/favicon-projeto.ico" type="image/x-icon" />
-    <title>Refúgio Solidário</title>
+    <title>Contato</title>
    
 </head>
 <body>
@@ -12,11 +12,11 @@
         <img src="Pagina-contatos-imagem/Sprint_Refugio_Solidario (1).jpg" alt="Logo Refúgio Solidário">
         <nav>
             <ul>
-                <li><a href="inicio.html"><p>Início</p></a></li>
-                <li><a href="blog.html"><p>Blog</p></a></li>
-                <li><a href="quemsomos.html"><p>Quem Somos</p></a></li>
-                <li><a href="contato.html"><p>Contato</p></a></li>
-                <li><a href="sejavoluntario.html"><p>Voluntário</p></a></li>
+                <a href="inicio.html">Início</a>
+                <a href="blog.html">Blog</a>
+                <a href="quemsomos.html">Quem Somos</a>
+                <a href="sejavoluntario.html">Voluntário</a>
+                <a href="contato.html">Contato</a>
             </ul>
         </nav>
     </header>
@@ -37,13 +37,11 @@
     </section>
 
     <footer>
-        
-        <a href="inicio.html">Início</a>
-        <a href="#links">Links</a>
-        <a href="sejavoluntario.html">Voluntário</a>
-        <a href="#privacidade">Política de Privacidade</a>
-        <a href="blog.html">Blog</a>
-        <a href="contato.html">Contato</a>
+        <ol><a href="inicio.html">Início</a></ol>
+        <ol><a href="blog.html">Blog</a></ol>
+        <ol><a href="quemsomos.html">Quem Somos</a></ol>
+        <ol><a href="sejavoluntario.html">Voluntário</a></ol>
+        <ol><a href="contato.html">Contato</a></ol>
         <p>Email: refugiosolidario@hotmail.com</p>
     </footer>
 </body>
