--- a/sejavoluntario.html
+++ b/sejavoluntario.html
@@ -3,9 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Seja Voluntário</title>
 </head>
 <body>
-    
+    <nav align="right">
+  
+        <ul>
+            <a href="inicio.html">Início</a>
+            <a href="blog.html">Blog</a>
+            <a href="quemsomos.html">Quem Somos</a>
+            <a href="sejavoluntario.html">Voluntário</a>
+            <a href="contato.html">Contato</a>
+        </ul>
+
+    </nav>
 </body>
 </html>
