adicionado footer nas páginas inicio, blog, voluntario

--- a/contato.html
+++ b/contato.html
@@ -9,7 +9,8 @@
 <body>
     <header>
        
-        <img src="Pagina-contatos-imagem/Sprint_Refugio_Solidario (1).jpg" alt="Logo Refúgio Solidário">
+        <img src="./img/logo-projeto-RS (1).png" alt="Logo do projeto refugio solidario" width="150" height="150">
+
         <nav>
             <ul>
                 <a href="inicio.html">Início</a>
@@ -37,12 +38,18 @@
     </section>
 
     <footer>
+    <img src="./img/logo-projeto-RS (1).png" alt="Logo do projeto refugio solidario" width="150" height="150">
+
         <ol><a href="inicio.html">Início</a></ol>
         <ol><a href="blog.html">Blog</a></ol>
         <ol><a href="quemsomos.html">Quem Somos</a></ol>
         <ol><a href="sejavoluntario.html">Voluntário</a></ol>
         <ol><a href="contato.html">Contato</a></ol>
         <p>Email: refugiosolidario@hotmail.com</p>
+        <ul>
+            <ol><a href="politica-de-privacidade.html">Política de Privacidade</a></ol>
+            <p align="center">© 2024 Feito com ❤ | Todos os direitos reservados.</p>
+        </ul>
     </footer>
 </body>
 </html>
