--- a/quemsomos.html
+++ b/quemsomos.html
@@ -25,11 +25,13 @@
    <main>
         <center><h1>Quem Somos</h1></center>
         <section>
+          
             <ul>
                 <h2>Missão</h2>
                 <p>Oferecer apoio emocional e psicológico a vítimas de desastres naturais, familiares e de outras instituições, proporcionando um espaço seguro e acolhedor para que possam encontrar conforto e orientação. Sensibilizar a sociedade sobre a importância de cuidar das vítimas e promover a colaboração de especialistas para garantir um suporte efetivo e humanizado.
                 </p>
             </ul>
+    
         </section>
         <section>
             <ul>
@@ -51,7 +53,7 @@
                 </p>
                 </li>
             </ul>
-        </section>
+        </section> -->
    </main>
    <footer style="background-color: #FFF8E1">
     <img src="./img/logo-projeto-RS (1).png" alt="Logo do projeto refugio solidario" width="150" height="150">
@@ -64,7 +66,8 @@
     </ul>
     <ul>
         <ol><a href="politica-de-privacidade.html">Política de Privacidade</a></ol>
-        <p align="center">© 2024 Nosso Site. Todos os direitos reservados.</p>
+        <p align="center">© 2024 Feito com ❤ | Todos os direitos reservados.</p>
+    </ul>
    </footer>
 </body>
 </html>
