--- a/sejavoluntario.html
+++ b/sejavoluntario.html
@@ -6,6 +6,9 @@
     <title>Seja Voluntário</title>
 </head>
 <body>
+    <header>
+    <img src="./img/logo-projeto-RS (1).png" alt="Logo do projeto refugio solidario" width="150" height="150">
+
     <nav align="right">
   
         <ul>
@@ -17,5 +20,13 @@
         </ul>
 
     </nav>
+</header>
+<footer>
+    <img src="./img/logo-projeto-RS (1).png" alt="Logo do projeto refugio solidario" width="150" height="150">
+    <ul>
+        <ol><a href="politica-de-privacidade.html">Política de Privacidade</a></ol>
+        <p align="center">© 2024 Feito com ❤ | Todos os direitos reservados.</p>
+    </ul>
+</footer>
 </body>
 </html>
