adicionado fotos dos perfis na página quem somo. Adicionado redes sociais no footer

--- a/blog.html
+++ b/blog.html
@@ -25,7 +25,10 @@
     <img src="./img/logo-projeto-RS (1).png" alt="Logo do projeto refugio solidario" width="150" height="150">
     <ul>
         <ol><a href="politica-de-privacidade.html">Política de Privacidade</a></ol>
-        <p align="center">© 2024 Feito com ❤ | Todos os direitos reservados.</p>
+        <a href="https://api.whatsapp.com/refugiosolidario" target="_blank">whatsapp</a>
+		<a href="facebook.com/refugiosolidario" target="_blank">facebook</a>
+		<a href="instagram.com/refugiosolidario" target="_blank">Instagram</a>
+        <a href="https://github.com/Alessandra-CBarbosa/Refugio-Solidario.git" target="blank">github</a>
     </ul>
 </footer>
 </body>
