--- a/contato.html
+++ b/contato.html
@@ -48,7 +48,10 @@
         <p>Email: refugiosolidario@hotmail.com</p>
         <ul>
             <ol><a href="politica-de-privacidade.html">Política de Privacidade</a></ol>
-            <p align="center">© 2024 Feito com ❤ | Todos os direitos reservados.</p>
+        <a href="https://api.whatsapp.com/refugiosolidario" target="_blank">whatsapp</a>
+		<a href="facebook.com/refugiosolidario" target="_blank">facebook</a>
+		<a href="instagram.com/refugiosolidario" target="_blank">Instagram</a>
+        <a href="https://github.com/Alessandra-CBarbosa/Refugio-Solidario.git" target="blank">github</a>
         </ul>
     </footer>
 </body>
