--- a/quemsomos.html
+++ b/quemsomos.html
@@ -24,6 +24,13 @@
    </header>
    <main>
         <center><h1>Quem Somos</h1></center>
+        <center>
+        <img src="./img/perfil-cris-projeto-RS .png" width="100" height="100"><span>Alessandra</span>
+        <img src="./img/perfil-jeffers-projeto-RS.png" width="100" height="100"><span>Jefferson</span>
+        <img src="./img/perfil-nath-projeto-RS.png" width="100" height="100"><span>Nathalia</span>
+        <img src="./img/perfil-laura-projeto-RS.png" width="100" height="100"><span>Laura</span>
+        <img src="./img/perfil-marcos-projeto-RS.png" width="100" height="100"><span>Marcos</span>
+        </center>
         <section>
           
             <ul>
@@ -53,7 +60,7 @@
                 </p>
                 </li>
             </ul>
-        </section> -->
+        </section>
    </main>
    <footer style="background-color: #FFF8E1">
     <img src="./img/logo-projeto-RS (1).png" alt="Logo do projeto refugio solidario" width="150" height="150">
@@ -66,6 +73,11 @@
     </ul>
     <ul>
         <ol><a href="politica-de-privacidade.html">Política de Privacidade</a></ol>
+        <a href="https://api.whatsapp.com/refugiosolidario" target="_blank">whatsapp</a>
+		<a href="facebook.com/refugiosolidario" target="_blank">facebook</a>
+		<a href="instagram.com/refugiosolidario" target="_blank">Instagram</a>
+        <a href="https://github.com/Alessandra-CBarbosa/Refugio-Solidario.git" target="blank">github</a>
+        
         <p align="center">© 2024 Feito com ❤ | Todos os direitos reservados.</p>
     </ul>
    </footer>
