Fiz ajustes no cabeçalho

--- a/contato.html
+++ b/contato.html
@@ -11,7 +11,7 @@
        
         <img src="./img/logo-projeto-RS (1).png" alt="Logo do projeto refugio solidario" width="150" height="150">
 
-        <nav>
+        <nav align="right">
             <ul>
                 <a href="inicio.html">Início</a>
                 <a href="blog.html">Blog</a>
