adicionado icones de redes sociais no footer

--- a/blog.html
+++ b/blog.html
@@ -56,12 +56,12 @@
         <ol><a href="contato.html">Contato</a></ol>
     </ul>
     <ul>
-        <ol><a href="politica-de-privacidade.html">Política de Privacidade</a></ol> 
+        <ol><a href="politica-de-privacidade.html">Política de Privacidade</a></ol>
         <a href="refugiosolidario@hotmail.com">refugiosolidario@hotmail.com</a>
-        <a href="https://api.whatsapp.com/refugiosolidario" target="_blank">WhatsApp</a>
-		<a href="facebook.com/refugiosolidario" target="_blank">Facebook</a>
-		<a href="instagram.com/refugiosolidario" target="_blank">Instagram</a>
-        <p align="center">© 2024 Feito com ❤ | Todos os direitos reservados.</p>
+        <a href="https://api.whatsapp.com/refugiosolidario" target="_blank"><img src="./img/icon-whatsapp.png" alt="logo-whatsapp" width="50" height="50">whatsapp</a>
+		<a href="facebook.com/refugiosolidario" target="_blank"><img src="./img/icon-facebook.png" alt="logo-whatsapp" width="50" height="50">facebook</a>
+		<a href="instagram.com/refugiosolidario" target="_blank"><img src="./img/icon-instagram.png" alt="logo-whatsapp" width="50" height="50">Instagram</a>
+        <a href="https://github.com/Alessandra-CBarbosa/Refugio-Solidario.git" target="blank"><img src="./img/icon-github.png" width="50" height="50">Github</a>
     </ul>
    </footer>
 </body>
