--- a/inicio.html
+++ b/inicio.html
@@ -25,10 +25,11 @@
     <img src="./img/logo-projeto-RS (1).png" alt="Logo do projeto refugio solidario" width="150" height="150">
     <ul>
         <ol><a href="politica-de-privacidade.html">Política de Privacidade</a></ol>
-        <a href="https://api.whatsapp.com/refugiosolidario" target="_blank">whatsapp</a>
-		<a href="facebook.com/refugiosolidario" target="_blank">facebook</a>
-		<a href="instagram.com/refugiosolidario" target="_blank">Instagram</a>
-        <a href="https://github.com/Alessandra-CBarbosa/Refugio-Solidario.git" target="blank">github</a>
+        <a href="refugiosolidario@hotmail.com">refugiosolidario@hotmail.com</a>
+        <a href="https://api.whatsapp.com/refugiosolidario" target="_blank"><img src="./img/icon-whatsapp.png" alt="logo-whatsapp" width="50" height="50">whatsapp</a>
+		<a href="facebook.com/refugiosolidario" target="_blank"><img src="./img/icon-facebook.png" alt="logo-whatsapp" width="50" height="50">facebook</a>
+		<a href="instagram.com/refugiosolidario" target="_blank"><img src="./img/icon-instagram.png" alt="logo-whatsapp" width="50" height="50">Instagram</a>
+        <a href="https://github.com/Alessandra-CBarbosa/Refugio-Solidario.git" target="blank"><img src="./img/icon-github.png" width="50" height="50">Github</a>
     </ul>
 </footer>
 </body>
