--- a/quemsomos.html
+++ b/quemsomos.html
@@ -73,10 +73,11 @@
     </ul>
     <ul>
         <ol><a href="politica-de-privacidade.html">Política de Privacidade</a></ol>
-        <a href="https://api.whatsapp.com/refugiosolidario" target="_blank">whatsapp</a>
-		<a href="facebook.com/refugiosolidario" target="_blank">facebook</a>
-		<a href="instagram.com/refugiosolidario" target="_blank">Instagram</a>
-        <a href="https://github.com/Alessandra-CBarbosa/Refugio-Solidario.git" target="blank">github</a>
+        <a href="refugiosolidario@hotmail.com">refugiosolidario@hotmail.com</a>
+        <a href="https://api.whatsapp.com/refugiosolidario" target="_blank"><img src="./img/icon-whatsapp.png" alt="logo-whatsapp" width="50" height="50">whatsapp</a>
+		<a href="facebook.com/refugiosolidario" target="_blank"><img src="./img/icon-facebook.png" alt="logo-whatsapp" width="50" height="50">facebook</a>
+		<a href="instagram.com/refugiosolidario" target="_blank"><img src="./img/icon-instagram.png" alt="logo-whatsapp" width="50" height="50">Instagram</a>
+        <a href="https://github.com/Alessandra-CBarbosa/Refugio-Solidario.git" target="blank"><img src="./img/icon-github.png" width="50" height="50">Github</a>
         
         <p align="center">© 2024 Feito com ❤ | Todos os direitos reservados.</p>
     </ul>
