Alterei a página contato adicionando novos parágrafos, ajustei o subtitulo h2 e adicionei uma nova imagem

--- a/contato.html
+++ b/contato.html
@@ -41,14 +41,17 @@
         </form>
         <button onclick="location.href='mailto:refugiosolidario@hotmail.com'">Enviar Email</button>
         <p> <strong> Localização </strong></p>
-        <img src="" alt=""> <!-- Vou aguardar a Laura subir as imagens do figma para o repositório para inserir as imagens-->
+        <img src="./img/icon-localizacao.png" alt="Essa é uma imagem que representa uma determinada localização"width="75" height="75"> Brasil
     </section>
 
     <section id="ajuda">
-        <h2>Precisamos de ajuda para ajudar</h2>
-        <img src="Pagina-contatos-imagem/images.jpeg" alt="Três pessoas conversando">
+        <p> Precisa de ajuda?</p>
+        <br/>
+        <h2><strong> Estamos aqui para ajudar.</strong></h2>
+        <p> Você será atendido por um voluntário especialmente treinado para esse fim, isto é, sem perguntas, com respeito e sigilo absoluto.</p>
+        <img  src="./Pagina-contatos-imagem/images.jpeg" alt="Três pessoas conversando">
     </section>
-
+<br/>
     <footer style="background-color: #FFF8E1">
     <img src="./img/logo-projeto-RS (1).png" alt="Logo do projeto refugio solidario" width="150" height="150">
 
