--- a/contato.html
+++ b/contato.html
@@ -48,10 +48,13 @@
         <p> Precisa de ajuda?</p>
         <br/>
         <h2><strong> Estamos aqui para ajudar.</strong></h2>
-        <p> Você será atendido por um voluntário especialmente treinado para esse fim, isto é, sem perguntas, com respeito e sigilo absoluto.</p>
+        <p> Você será atendido por um voluntário especialmente treinado para esse fim, isto é, sem perguntas, com respeito e sigílo absoluto.</p>
+        <br/>
+        <img src="./img/icon-whatsapp.png" alt="imagem que representa o simbolo do whatsapp"width="75" height="75"> Entre em contato conosco<br/>
+        <br/>
         <img  src="./Pagina-contatos-imagem/images.jpeg" alt="Três pessoas conversando">
     </section>
-<br/>
+         <br/>
     <footer style="background-color: #FFF8E1">
     <img src="./img/logo-projeto-RS (1).png" alt="Logo do projeto refugio solidario" width="150" height="150">
 
