adicionei estilização no cabeçalho do blog e tambem no footer do mesmo

--- a/contato.html
+++ b/contato.html
@@ -5,7 +5,7 @@
     <link rel="icon" href="favicon/favicon-projeto.ico" type="image/x-icon" />
     <link rel="preconnect" href="htpps://fonts.gloogleapis.com" />
     <link rel="preconnect" href="htpps://fonts.gstatic.com" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="contato.css" />
     <title>Contato</title>
   </head>
   <body>
