criado email, instagram, grupo do whatsapp

--- a/Refugio-Solidario/contato.html
+++ b/Refugio-Solidario/contato.html
@@ -40,7 +40,7 @@
           <input type="email" id="email" name="email" placeholder="Email" />
           <button type="submit">Enviar</button>
         </form>
-        <button onclick="location.href='mailto:refugiosolidario@hotmail.com'">
+        <button onclick="location.href='mailto:refugiosolidariors@hotmail.com'">
           Enviar Email
         </button>
         <p><strong> Localização </strong></p>
@@ -120,7 +120,7 @@
                 ><img src="./img/icon-email.png" width="50" height="50" />
               </a>
                <a 
-                href="https://api.whatsapp.com/refugiosolidario"
+                href="https://chat.whatsapp.com/EjysNylrMnWJBfVH6kDqSL"
                 target="_blank"
                 ><img
                   src="./img/icon-whatsapp.png"
@@ -135,7 +135,7 @@
                   width="50"
                   height="50"
               /></a>
-              <a  href="instagram.com/refugiosolidario" target="_blank"
+              <a  href="https://www.instagram.com/refugiosolidariors/" target="_blank"
                 ><img
                   src="./img/icon-instagram.png"
                   alt="logo-whatsapp"
