add links das redes sociais em todas as paginas, inserido imagens formatadas

--- a/blog.html
+++ b/blog.html
@@ -12,7 +12,7 @@
     <header>
         <nav>
           <ul>
-            <a href="inicio.html">Início</a>
+            <a href="index.html">Início</a>
             <a href="blog.html">Blog</a>
             <a href="quemsomos.html">Quem Somos</a>
             <a href="sejavoluntario.html">Voluntário</a>
@@ -21,7 +21,7 @@
         </nav>
   
         <img
-          src="./img/logo-projeto-RS (1).png"
+          src="./img/logo-projeto-RS.png"
           alt="Logo do projeto refugio solidario"
           width="150"
           height="150"
@@ -55,7 +55,7 @@
 <footer class="rodape">
     <div class= "logo-RS">
       <img
-        src="./img/logo-projeto-RS (1).png"
+        src="./img/logo-projeto-RS.png"
         alt="Logo do projeto refugio solidario"
         width="150"
         height="150"
@@ -65,7 +65,7 @@
       <div>
         <ul>
           <ol>
-            <a href="inicio.html">Início</a>
+            <a href="index.html">Início</a>
           </ol>
           <ol>
             <a href="blog.html">Blog</a>
@@ -90,28 +90,28 @@
     <nav class= "nav-icone">
       <div class="icones">
         <ul class="ul-incones">
-          <a  href="mailto:refugiosolidario@hotmail.com" target="_blank"
-            ><img src="./img/icon-email.png" width="50" height="50" />
+          <a  href="mailto:refugiosolidariors@hotmail.com" target="_blank"
+            ><img src="./img/outlook.png" width="50" height="50" />
           </a>
            <a 
-            href="https://api.whatsapp.com/refugiosolidario"
+            href="https://chat.whatsapp.com/EjysNylrMnWJBfVH6kDqSL"
             target="_blank"
             ><img
-              src="./img/icon-whatsapp.png"
+              src="./img/whatsapp-dark.png"
               alt="logo-whatsapp"
               width="50"
               height="50"
           /></a>
           <a  href="facebook.com/refugiosolidario" target="_blank"
             ><img
-              src="./img/icon-facebook.png"
+              src="./img/facebook-dark.png"
               alt="logo-whatsapp"
               width="50"
               height="50"
           /></a>
-          <a  href="instagram.com/refugiosolidario" target="_blank"
+          <a  href="https://www.instagram.com/refugiosolidariors" target="_blank"
             ><img
-              src="./img/icon-instagram.png"
+              src="./img/instagram.png"
               alt="logo-whatsapp"
               width="50"
               height="50"
@@ -119,7 +119,7 @@
            <a 
             href="https://github.com/Alessandra-CBarbosa/Refugio-Solidario.git"
             target="blank"
-            ><img src="./img/icon-github.png" width="50" height="50"
+            ><img src="./img/github.png" width="50" height="50"
           /></a>
         </ul>
       </div>
