--- a/quemsomos.html
+++ b/quemsomos.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="quemsomos.css">
     <title>Quem Somos</title>
 </head>
 <body>
@@ -10,7 +11,7 @@
     <nav align="right">
   
         <ul>
-            <a href="inicio.html">Início</a>
+            <a href="index.html">Início</a>
             <a href="blog.html">Blog</a>
             <a href="quemsomos.html">Quem Somos</a>
             <a href="sejavoluntario.html">Voluntário</a>
@@ -18,7 +19,7 @@
         </ul>
 
     </nav>  
-    <img src="./img/logo-projeto-RS (1).png" alt="Logo do projeto refugio solidario" width="150" height="150">
+    <img src="./img/logo-projeto-RS.png" alt="Logo do projeto refugio solidario" width="150" height="150">
        
    </header>
    <main>
@@ -61,9 +62,9 @@
         </section>
    </main>
    <footer style="background-color: #FFF8E1">
-    <img src="./img/logo-projeto-RS (1).png" alt="Logo do projeto refugio solidario" width="150" height="150">
+    <img src="./img/logo-projeto-RS.png" alt="Logo do projeto refugio solidario" width="150" height="150">
     <ul>
-        <ol><a href="inicio.html">Início</a></ol>
+        <ol><a href="index.html">Início</a></ol>
         <ol><a href="blog.html">Blog</a></ol>
         <ol><a href="quemsomos.html">Quem Somos</a></ol>
         <ol><a href="sejavoluntario.html">Voluntário</a></ol>
@@ -71,11 +72,11 @@
     </ul>
     <ul>
         <ol><a href="politica-de-privacidade.html" target="_blank">Política de Privacidade</a></ol>
-        <a href="mailto:refugiosolidario@hotmail.com" target="_blank"><img src="./img/icon-email.png" width="50" height="50"> refugiosolidario@hotmail.com</a>
-        <a href="https://api.whatsapp.com/refugiosolidario" target="_blank"><img src="./img/icon-whatsapp.png" alt="logo-whatsapp" width="50" height="50">whatsapp</a>
-		<a href="facebook.com/refugiosolidario" target="_blank"><img src="./img/icon-facebook.png" alt="logo-whatsapp" width="50" height="50">facebook</a>
-		<a href="instagram.com/refugiosolidario" target="_blank"><img src="./img/icon-instagram.png" alt="logo-whatsapp" width="50" height="50">Instagram</a>
-        <a href="https://github.com/Alessandra-CBarbosa/Refugio-Solidario.git" target="blank"><img src="./img/icon-github.png" width="50" height="50">Github</a>
+        <a href="mailto:refugiosolidariors@hotmail.com" target="_blank"><img src="./img/outlook.png" width="50" height="50"></a>
+        <a href="https://chat.whatsapp.com/EjysNylrMnWJBfVH6kDqSL" target="_blank"><img src="./img/whatsapp-dark.png" alt="logo-whatsapp" width="50" height="50"></a>
+		<a href="facebook.com/refugiosolidario" target="_blank"><img src="./img/facebook-dark.png" alt="logo-whatsapp" width="50" height="50"></a>
+		<a href="https://www.instagram.com/refugiosolidariors" target="_blank"><img src="./img/instagram.png" alt="logo-whatsapp" width="50" height="50"></a>
+        <a href="https://github.com/Alessandra-CBarbosa/Refugio-Solidario.git" target="blank"><img src="./img/github.png" width="50" height="50"></a>
         
         <p align="center">© 2024 Feito com ❤ | Todos os direitos reservados.</p>
     </ul>
