add font-family, add class footer, alterado texto copytright

--- a/quemsomos.html
+++ b/quemsomos.html
@@ -76,7 +76,7 @@
    </main>
 
    <footer class="footerMissaoVisaoValores">
-    <img id="logoProjetoFooter" src="./img/logo-projeto-RS.png" alt="Logo do projeto refugio solidario">
+        <img id="logoProjetoFooter" src="./img/logo-projeto-RS.png" alt="Logo do projeto refugio solidario">
     <ul>
         <a class="links" href="index.html">Início</a>
         <a class="links" href="blog.html">Blog</a>
@@ -98,9 +98,9 @@
         <a href="https://github.com/Alessandra-CBarbosa/Refugio-Solidario.git" target="blank"><img class="redeSociais" src="./img/github.png"></a>
     
     </div>
-
-    <p>© 2024 Feito com ❤ | Front-end Developer | Todos os direitos reservados.</p>
-
+    <div id="copyright">
+      <p>© 2024 Feito com ❤ | Front-end Developer | Todos os direitos reservados.</p>
+    </div>
    </footer>
 </body>
 </html>
