fiz o cabeçalho e footer para a pagina blog

--- a/contato.html
+++ b/contato.html
@@ -9,23 +9,24 @@
     <title>Contato</title>
   </head>
   <body>
-    <header>
+    <header class = "header">
       <nav>
         <ul>
-          <a href="index.html">Início</a>
-          <a href="blog.html">Blog</a>
-          <a href="quemsomos.html">Quem Somos</a>
-          <a href="sejavoluntario.html">Voluntário</a>
-          <a href="contato.html">Contato</a>
+          <a href="index.html" class="nav-item">Início</a>
+          <a href="blog.html" class="nav-item">Blog</a>
+          <a href="quemsomos.html" class="nav-item">Quem Somos</a>
+          <a href="sejavoluntario.html" class="nav-item">Voluntário</a>
+          <a href="#contato" class="nav-item">Contato</a>
         </ul>
       </nav>
-
+        <div class=" logo">
       <img
         src="./img/logo-projeto-RS.png"
         alt="Logo do projeto refugio solidario"
-        width="150"
-        height="150"
+        width="80"
+        height="80"
       />
+    </div>
     </header>
     <main>
       <section id="contato">
@@ -83,30 +84,30 @@
           <img
             src="./img/logo-projeto-RS.png"
             alt="Logo do projeto refugio solidario"
-            width="150"
-            height="150"
+            width="70"
+            height="70"
           />
         </div>
         <nav cass="nav">
-          <div>
+          <div >
             <ul>
               <ol>
-                <a href="index.html">Início</a>
+                <a href="index.html"class="nav-rodape">Início</a>
               </ol>
               <ol>
-                <a href="blog.html">Blog</a>
+                <a href="blog.html"class="nav-rodape">Blog</a>
               </ol>
               <ol>
-                <a href="quemsomos.html">Quem Somos</a>
+                <a href="quemsomos.html"class="nav-rodape">Quem Somos</a>
               </ol>
               <ol>
-                <a href="sejavoluntario.html">Voluntário</a>
+                <a href="sejavoluntario.html"class="nav-rodape">Voluntário</a>
               </ol>
               <ol>
-                <a href="contato.html">Contato</a>
+                <a href="contato.html"class="nav-rodape">Contato</a>
               </ol>
               <ol>
-                <a href="politica-de-privacidade.html" target="_blank"
+                <a href="politica-de-privacidade.html"class="nav-rodape" target="_blank"
                   >Política de Privacidade</a
                 >
               </ol>
@@ -117,35 +118,35 @@
           <div class="icones">
             <ul class="ul-incones">
               <a  href="mailto:refugiosolidariors@hotmail.com" target="_blank"
-                ><img src="./img/outlook.png" width="50" height="50" />
+                ><img class=" imagemSociais" src="./img/outlook.png" width="30" height="30" />
               </a>
                <a 
                 href="https://chat.whatsapp.com/EjysNylrMnWJBfVH6kDqSL"
                 target="_blank"
-                ><img
+                ><img class=" imagemSociais"
                   src="./img/whatsapp-dark.png"
                   alt="logo-whatsapp"
-                  width="50"
-                  height="50"
+                  width="30"
+                  height="30"
               /></a>
               <a  href="facebook.com/refugiosolidario" target="_blank"
-                ><img
+                ><img class=" imagemSociais"
                   src="./img/facebook-dark.png"
                   alt="logo-whatsapp"
-                  width="50"
-                  height="50"
+                  width="30"
+                  height="30"
               /></a>
               <a  href="https://www.instagram.com/refugiosolidariors/" target="_blank"
-                ><img
+                ><img class=" imagemSociais"
                   src="./img/instagram.png"
                   alt="logo-whatsapp"
-                  width="50"
-                  height="50"
+                  width="30"
+                  height="30"
               /></a>
                <a 
                 href="https://github.com/Alessandra-CBarbosa/Refugio-Solidario.git"
                 target="blank"
-                ><img src="./img/github.png" width="50" height="50"
+                ><img class=" imagemSociais"src="./img/github.png" width="30" height="30"
               /></a>
             </ul>
           </div>
