aplicado estilo na primeira section do main

--- a/index.html
+++ b/index.html
@@ -40,16 +40,22 @@
 </header>
 <main>
     
-    <section>
+    <section class="resumo-container">
         
         <div class="resumo-atendimento">
-            <h2>26</h2><h3>Estados Atendidos</h3>
+            <h2>
+                26
+            </h2>
+            <h3>
+                Estados Atendidos
+            </h3>
         </div>
 
         <div class="resumo-atendimento">
             <h2>
                 8.000+
             </h2>
+
             <h3>
                 Atendimentos Efetuados
             </h3>        
