fiz uma correçao no href da pagina contato

--- a/sejavoluntario.html
+++ b/sejavoluntario.html
@@ -15,7 +15,7 @@
             <a href="blog.html" class="nav-item">Blog</a>
             <a href="quemsomos.html" class="nav-item">Quem Somos</a>
             <a href="sejavoluntario.html" class="nav-item">Voluntário</a>
-            <a href="#contato" class="nav-item">Contato</a>
+            <a href="contato.html" class="nav-item">Contato</a>
           </ul>
         </nav>
           <div class=" logo">
