erro no codigo, e corrigido

--- a/quemsomos.html
+++ b/quemsomos.html
@@ -7,14 +7,14 @@
     <title>Quem Somos</title>
 </head>
 <body>
-    <nav align="right">
+    <nav class="navgation">
   
         <ul>
-            <a href="index.html">Início</a>
-            <a href="blog.html">Blog</a>
-            <a href="quemsomos.html">Quem Somos</a>
-            <a href="sejavoluntario.html">Voluntário</a>
-            <a href="contato.html">Contato</a>
+            <a class="links" href="index.html">Início</a>
+            <a class="links" href="blog.html">Blog</a>
+            <a class="links" href="quemsomos.html">Quem Somos</a>
+            <a class="links" href="sejavoluntario.html">Voluntário</a>
+            <a class="links" href="contato.html">Contato</a>
         </ul>
 
     </nav>  
@@ -64,12 +64,12 @@
    <footer class="footerMissaoVisaoValores">
     <img id="logoProjetoFooter" src="./img/logo-projeto-RS.png" alt="Logo do projeto refugio solidario">
     <ul>
-        <a href="index.html">Início</a>
-        <a href="blog.html">Blog</a>
-        <a href="quemsomos.html">Quem Somos</a>
-        <a href="sejavoluntario.html">Voluntário</a>
-        <a href="contato.html">Contato</a>
-        <a href="politica-de-privacidade.html" target="_blank">Política de Privacidade</a>
+        <a class="links" href="index.html">Início</a>
+        <a class="links" href="blog.html">Blog</a>
+        <a class="links" href="quemsomos.html">Quem Somos</a>
+        <a class="links" href="sejavoluntario.html">Voluntário</a>
+        <a class="links" href="contato.html">Contato</a>
+        <a class="links" href="politica-de-privacidade.html" target="_blank">Política de Privacidade</a>
     </ul>
 
     <div>        
@@ -80,8 +80,10 @@
         <a href="https://github.com/Alessandra-CBarbosa/Refugio-Solidario.git" target="blank"><img class="redeSociais" src="./img/github.png"></a>
     
     </div>
-
-    <p>© 2024 Feito com ❤ | Todos os direitos reservados.</p>
+    <div  id="copyright">
+      <p>© 2024 Feito com ❤ | Todos os direitos reservados.</p>
+    </div>
+      
 
    </footer>
 </body>
