--- a/index.html
+++ b/index.html
@@ -193,15 +193,20 @@
     </ul>
 
     <div>        
-        <a href="mailto:refugiosolidariors@hotmail.com" target="_blank"><img class="redeSociais" src="./img/outlook.png"></a>
+        <a href="mailto:refugiosolidariors@hotmail.com" target="_blank">
+            <img class="redeSociais" src="./img/outlook.png"></a>
 
-        <a href="https://chat.whatsapp.com/EjysNylrMnWJBfVH6kDqSL" target="_blank"><img class="redeSociais" src="./img/whatsapp-dark.png" alt="logo-whatsapp"></a>
+        <a href="https://chat.whatsapp.com/EjysNylrMnWJBfVH6kDqSL" target="_blank">
+            <img class="redeSociais" src="./img/whatsapp-dark.png" alt="logo-whatsapp"></a>
 
-        <a href="facebook.com/refugiosolidario" target="_blank"><img class="redeSociais" src="./img/facebook-dark.png" alt="logo-whatsapp"></a>
+        <a href="facebook.com/refugiosolidario" target="_blank">
+            <img class="redeSociais" src="./img/facebook-dark.png" alt="logo-whatsapp"></a>
 
-        <a href="https://www.instagram.com/refugiosolidariors" target="_blank"><img class="redeSociais" src="./img/instagram.png" alt="logo-whatsapp"></a>
+        <a href="https://www.instagram.com/refugiosolidariors" target="_blank">
+            <img class="redeSociais" src="./img/instagram.png" alt="logo-whatsapp"></a>
 
-        <a href="https://github.com/Alessandra-CBarbosa/Refugio-Solidario.git" target="blank"><img class="redeSociais" src="./img/github.png"></a>
+        <a href="https://github.com/Alessandra-CBarbosa/Refugio-Solidario.git" target="blank">
+            <img class="redeSociais" src="./img/github.png"></a>
 
     </div>
     <div id="copyright">
